--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -89,18 +89,17 @@ nav:
             - Overview: api-management-overview/create-api-overview.md
             - Via REST API: api-management-overview/tools-for-api-development.md
             - Via CRs:  api-management-overview/create-api-using-crs.md
+            - APK Config Language Support Plugin: api-management-overview/apk-conf-lang-support.md
         - Develop and Deploy API:
             - Rest APIs: 
-                - Via REST API: 
-                    - Generate API Configuration file: create-api/create-and-deploy-apis/generate-apk-conf.md
-                    - Generate K8s custom resources and Deploy: create-api/create-and-deploy-apis/create-and-deploy-api.md
-                    - Direct Deploy into K8s Server: create-api/create-and-deploy-apis/direct-deploy.md
-                    - Undeploy API: create-api/create-and-deploy-apis/direct-undeploy.md
-                    - API Config Language Support Plugin: create-api/create-and-deploy-apis/apk-conf-lang-support.md
+                - Via REST API: create-api/create-and-deploy-apis/rest/create-rest-api-using-rest-api.md
                 - Via CRs: create-api/create-and-deploy-apis/rest/create-rest-api-using-crs.md
             - GraphQL APIs: 
                 - Via CRs: create-api/create-and-deploy-apis/graphql/create-graphql-api-using-crs.md
                 # todo(amali) add rest of the links
+        - Undeploy API: 
+            - Via REST API: undeploy/direct-undeploy.md
+            #todo(amali) add the CRs link
         - Manage Endpoint:
             - Define Endpoint: develop-and-deploy-api/endpoints/prod-sand-endpoints.md
             - Manage Certificate: create-api/manage-service-endpoint/manage-certificate.md
