--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -247,6 +247,7 @@ nav:
         - Production Deployment Guidelines: setup/production-deployment-guideline.md
         - Configure HPA for gateway: setup/configure-hpa.md
         - Deploy in OpenShift: setup/deploy-in-openshift.md
+        - Multi-environment Deployment on Gateway: setup/multi-env-deployment-on-apk.md
 
 #        - Organization: setup/organizations.md
        #- Deploy:
