--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -235,7 +235,8 @@ nav:
     #    - Helm Catalog: catalogs/config-catalog.md
     - Setup: 
         - Prerequisites: setup/prerequisites.md
-        - Install: setup/install.md
+        - Install Dataplane: setup/install.md
+        - Install Control plane with Dataplane: setup/install-with-cp.md
         - Uninstall: setup/uninstall.md
         - Deployment Patterns:
               - Overview: setup/deployment/deployment-patterns-overview.md
