--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -15,16 +15,16 @@
 # under the License.
 
 # Project information
-site_name: APK Documentation 1.1.0
+site_name: APK Documentation 1.2.0
 site_description: Documentation for WSO2 API Platform for Kubernetes
 site_author: WSO2
-site_url: https://apk.docs.wso2.com/en/latest/
+site_url: https://apk.docs.wso2.com/en/1.2.0/
 
 # Repository
 repo_name: wso2/apk
 repo_url: https://github.com/wso2/apk
 # Change the edit_url with every new release
-edit_uri: https://github.com/wso2/docs-apk/edit/1.1.0/en/docs/
+edit_uri: https://github.com/wso2/docs-apk/edit/1.2.0/en/docs/
 dev_addr: localhost:8000
 
 # Copyright
@@ -440,7 +440,7 @@ extra:
           link: https://twitter.com/wso2
         - type: linkedin
           link: https://www.linkedin.com/company/wso2
-    site_version: 1.1.0
+    site_version: 1.2.0
     # base_path: http://localhost:8000
     base_path: https://apk.docs.wso2.com
     envoy_path: https://www.envoyproxy.io/docs/envoy/v1.20.0
