--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -103,6 +103,9 @@ nav:
                 - Overview: create-api/create-and-deploy-apis/ai/ai-api-overview.md
                 - Via REST API: create-api/create-and-deploy-apis/ai/create-ai-api-using-rest-api.md
                 - Via CRs: create-api/create-and-deploy-apis/ai/create-ai-api-using-crs.md
+            - gRPC APIs: 
+                - Via CRs: create-api/create-and-deploy-apis/grpc/create-grpc-api-using-crs.md
+                - Via REST API: create-api/create-and-deploy-apis/grpc/create-grpc-api-using-rest-api.md
         - Undeploy API: 
             - Via REST API: undeploy/undeploy-rest-api.md
             - Via CRs: undeploy/undeploy-crs.md
