--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -104,8 +104,11 @@ nav:
                 - Via REST API: create-api/create-and-deploy-apis/ai/create-ai-api-using-rest-api.md
                 - Via CRs: create-api/create-and-deploy-apis/ai/create-ai-api-using-crs.md
             - gRPC APIs: 
+                - Overview: create-api/create-and-deploy-apis/grpc/overview.md
                 - Via CRs: create-api/create-and-deploy-apis/grpc/create-grpc-api-using-crs.md
-                - Via REST API: create-api/create-and-deploy-apis/grpc/create-grpc-api-using-rest-api.md
+                - Via REST API: 
+                    - API with one proto file: create-api/create-and-deploy-apis/grpc/create-grpc-api-using-rest-api.md
+                    - API with multiple proto files: create-api/create-and-deploy-apis/grpc/create-grpc-api-with-multiple-proto-files.md
         - Undeploy API: 
             - Via REST API: undeploy/undeploy-rest-api.md
             - Via CRs: undeploy/undeploy-crs.md
