adding AI API creation from APIM flows

--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -201,6 +201,7 @@ nav:
                     - Develop and Deploy API:
                         - Create REST APIs: control-plane/api-management/control-plane-create-and-deploy-rest-apis.md
                         - Create GraphQL APIs: control-plane/api-management/control-plane-create-and-deploy-graphql-apis.md
+                        - Create AI APIs: control-plane/api-management/control-plane-create-and-deploy-ai-apis.md
                     - Add APK Gateway: control-plane/api-management/control-plane-add-apk-gateway.md
                     - Create Application and Subscribe: control-plane/api-management/control-plane-create-application-and-subscription.md
         - APK as a Gateway in API Manager:
@@ -211,6 +212,7 @@ nav:
                   - Develop and Deploy API:
                       - Create REST APIs: control-plane/apk-as-gateway-in-apim/api-management/control-plane-create-and-deploy-rest-apis.md
                       - Create GraphQL APIs: control-plane/apk-as-gateway-in-apim/api-management/control-plane-create-and-deploy-graphql-apis.md
+                      - Create AI APIs: control-plane/apk-as-gateway-in-apim/api-management/control-plane-create-and-deploy-ai-apis.md
                   - Add APK Gateway: control-plane/apk-as-gateway-in-apim/api-management/control-plane-add-apk-gateway.md
                   - Create Application and Subscribe: control-plane/apk-as-gateway-in-apim/api-management/control-plane-create-application-and-subscription.md
         - Advanced Configuration:
