Adding weighted routing documentation

--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -122,6 +122,8 @@ nav:
                 - Timeout: create-api/manage-service-endpoint/manage-resiliency-timeout.md
                 - Retry Policy: create-api/manage-service-endpoint/manage-resiliency-retry-policy.md
                 - Circuit Breaker: create-api/manage-service-endpoint/manage-resiliency-circuit-breaker.md
+            - Weighted Routing:
+                - Via CRs: create-api/weighted-routing/weighted-routing-via-crs.md
         - API Policies: 
             - Overview: create-api/create-and-attach-api-policies/api-policies-overview.md
             - Interceptor Service: 
