--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -292,6 +292,8 @@ nav:
         - Customize Configurations: setup/Customize-Configurations.md
         - Production Deployment Guidelines: setup/production-deployment-guideline.md
         - Customize Cert-Manager: setup/cert-manager.md
+        - Configure Permissions:
+            - Customize Roles and RoleBindings: setup/configuring-permissions/configuring-roles-and-rolebindings.md
         - Configure HPA for gateway: setup/configure-hpa.md
         - Deploy in OpenShift: setup/deploy-in-openshift.md
         - Multi-environment Deployment on Gateway: setup/multi-env-deployment-on-apk.md
