--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -301,6 +301,7 @@ nav:
         - Customize Configurations: setup/Customize-Configurations.md
         - Production Deployment Guidelines: setup/production-deployment-guideline.md
         - Customize Cert-Manager: setup/cert-manager.md
+        - Customize Webhook Configurations: setup/webhook-customization.md
         - Configure HPA for gateway: setup/configure-hpa.md
         - Deploy in OpenShift: setup/deploy-in-openshift.md
         - Multi-environment Deployment on Gateway: setup/multi-env-deployment-on-apk.md
