--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -294,6 +294,7 @@ nav:
         - Customize Cert-Manager: setup/cert-manager.md
         - Configure Permissions:
             - Customize Roles and RoleBindings: setup/configuring-permissions/configuring-roles-and-rolebindings.md
+        - Customize Webhook Configurations: setup/webhook-customization.md
         - Configure HPA for gateway: setup/configure-hpa.md
         - Deploy in OpenShift: setup/deploy-in-openshift.md
         - Multi-environment Deployment on Gateway: setup/multi-env-deployment-on-apk.md
