--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -302,6 +302,8 @@ nav:
         - Configure Ingress: setup/ingress.md
         - Production Deployment Guidelines: setup/production-deployment-guideline.md
         - Customize Cert-Manager: setup/cert-manager.md
+        - Configure Permissions:
+            - Customize Roles and RoleBindings: setup/configuring-permissions/configuring-roles-and-rolebindings.md
         - Customize Webhook Configurations: setup/webhook-customization.md
         - Configure HPA for gateway: setup/configure-hpa.md
         - Deploy in OpenShift: setup/deploy-in-openshift.md
