--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -74,9 +74,7 @@ nav:
     - Get Started:
         #- Get Started - Overview: get-started/get-started-overview.md
         - Quick Start: get-started/quick-start-guide.md
-        - Quick Start With Control Plane: 
-           - Developer-Driven Design First: get-started/quick-start-guide-with-cp.md
-           - Portal-Driven Design First: get-started/quick-start-guide-as-gateway.md
+        - Quick Start With Control Plane: get-started/quick-start-guide-as-gateway.md
         # - Basic Flow:
         #    - Overview: restapi/overview.md
         #    - Create an API: restapi/create-api.md
