Explain how to remove cluster roles

--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -302,6 +302,8 @@ nav:
         - Production Deployment Guidelines: setup/production-deployment-guideline.md
         - Customize Cert-Manager: setup/cert-manager.md
         - Configure Permissions:
+            - Overview: setup/configuring-permissions/configuring-permissions-overview.md
+            - Customize ClusterRoles and ClusterRoleBindings: setup/configuring-permissions/configuring-clusterrole-and-clusterrolebinding.md
             - Customize Roles and RoleBindings: setup/configuring-permissions/configuring-roles-and-rolebindings.md
         - Customize Webhook Configurations: setup/webhook-customization.md
         - Configure HPA for gateway: setup/configure-hpa.md
