--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -303,8 +303,8 @@ nav:
         - Customize Cert-Manager: setup/cert-manager.md
         - Configure Permissions:
             - Overview: setup/configuring-permissions/configuring-permissions-overview.md
-            - Customize ClusterRoles and ClusterRoleBindings: setup/configuring-permissions/configuring-clusterrole-and-clusterrolebinding.md
-            - Customize Roles and RoleBindings: setup/configuring-permissions/configuring-roles-and-rolebindings.md
+            - Configuring the Kubernetes Gateway per Cluster: setup/configuring-permissions/configuring-clusterrole-and-clusterrolebinding.md
+            - Configuring the Kubernetes Gateway per Namespace: setup/configuring-permissions/configuring-roles-and-rolebindings.md
         - Customize Webhook Configurations: setup/webhook-customization.md
         - Configure HPA for gateway: setup/configure-hpa.md
         - Deploy in OpenShift: setup/deploy-in-openshift.md
